// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneRuleTargetEditor > should render a drop down with appropriate resource type: Color 1`] = `
<div>
  <div
    class="awsui_grid_14yj0_1lwse_99"
  >
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        <div
          class="awsui_root_r2vco_wvvus_99"
        >
          <div
            class="awsui_root_qwoo0_1ea5w_149"
          >
            <div
              class=""
              id=":rd:"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="select-arialabel-:rb: trigger-content-:rf:"
                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                id="trigger:r8:"
                type="button"
              >
                <span
                  class="awsui_trigger_dwuol_18z0d_122"
                  id="trigger-content-:rf:"
                >
                  test message
                </span>
                <span
                  class="awsui_arrow_18eso_syr88_103"
                >
                  <span
                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="filled stroke-linejoin-round"
                        d="M4 5h8l-4 6-4-6z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              tabindex="-1"
            />
            <div>
              <div
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                data-animating="false"
                data-open="false"
                id="dialog:ra:"
                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
              >
                <div
                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                >
                  <div
                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                  >
                    <ul
                      aria-labelledby="select-arialabel-:rb: trigger:r8:"
                      class="awsui_options-list_19gcf_halkh_99"
                      id="option-list:r9:"
                      role="listbox"
                      style="position: relative;"
                      tabindex="-1"
                    />
                    <div
                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                    >
                      <div
                        id="footer:rc:"
                      />
                      <span
                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                      >
                        <span
                          aria-atomic="true"
                          aria-live="polite"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                tabindex="-1"
              />
            </div>
          </div>
          <span
            class="awsui_root_xttbq_pgwjg_99"
            id="select-arialabel-:rb:"
          />
        </div>
      </div>
    </div>
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-8_14yj0_1lwse_224"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        SceneRuleTargetColorEditor
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneRuleTargetEditor > should render a drop down with appropriate resource type: Icon 1`] = `
<div>
  <div
    class="awsui_grid_14yj0_1lwse_99"
  >
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        <div
          class="awsui_root_r2vco_wvvus_99"
        >
          <div
            class="awsui_root_qwoo0_1ea5w_149"
          >
            <div
              class=""
              id=":r5:"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="select-arialabel-:r3: trigger-content-:r7:"
                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                id="trigger:r0:"
                type="button"
              >
                <span
                  class="awsui_trigger_dwuol_18z0d_122"
                  id="trigger-content-:r7:"
                >
                  test message
                </span>
                <span
                  class="awsui_arrow_18eso_syr88_103"
                >
                  <span
                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="filled stroke-linejoin-round"
                        d="M4 5h8l-4 6-4-6z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              tabindex="-1"
            />
            <div>
              <div
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                data-animating="false"
                data-open="false"
                id="dialog:r2:"
                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
              >
                <div
                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                >
                  <div
                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                  >
                    <ul
                      aria-labelledby="select-arialabel-:r3: trigger:r0:"
                      class="awsui_options-list_19gcf_halkh_99"
                      id="option-list:r1:"
                      role="listbox"
                      style="position: relative;"
                      tabindex="-1"
                    />
                    <div
                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                    >
                      <div
                        id="footer:r4:"
                      />
                      <span
                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                      >
                        <span
                          aria-atomic="true"
                          aria-live="polite"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                tabindex="-1"
              />
            </div>
          </div>
          <span
            class="awsui_root_xttbq_pgwjg_99"
            id="select-arialabel-:r3:"
          />
        </div>
      </div>
    </div>
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-8_14yj0_1lwse_224"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        SceneRuleTargetIconEditor
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneRuleTargetEditor > should render a drop down with appropriate resource type: Opacity 1`] = `
<div>
  <div
    class="awsui_grid_14yj0_1lwse_99"
  >
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        <div
          class="awsui_root_r2vco_wvvus_99"
        >
          <div
            class="awsui_root_qwoo0_1ea5w_149"
          >
            <div
              class=""
              id=":rl:"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="select-arialabel-:rj: trigger-content-:rn:"
                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                id="trigger:rg:"
                type="button"
              >
                <span
                  class="awsui_trigger_dwuol_18z0d_122"
                  id="trigger-content-:rn:"
                >
                  test message
                </span>
                <span
                  class="awsui_arrow_18eso_syr88_103"
                >
                  <span
                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="filled stroke-linejoin-round"
                        d="M4 5h8l-4 6-4-6z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              tabindex="-1"
            />
            <div>
              <div
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                data-animating="false"
                data-open="false"
                id="dialog:ri:"
                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
              >
                <div
                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                >
                  <div
                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                  >
                    <ul
                      aria-labelledby="select-arialabel-:rj: trigger:rg:"
                      class="awsui_options-list_19gcf_halkh_99"
                      id="option-list:rh:"
                      role="listbox"
                      style="position: relative;"
                      tabindex="-1"
                    />
                    <div
                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                    >
                      <div
                        id="footer:rk:"
                      />
                      <span
                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                      >
                        <span
                          aria-atomic="true"
                          aria-live="polite"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                tabindex="-1"
              />
            </div>
          </div>
          <span
            class="awsui_root_xttbq_pgwjg_99"
            id="select-arialabel-:rj:"
          />
        </div>
      </div>
    </div>
    <div
      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-8_14yj0_1lwse_224"
    >
      <div
        class="awsui_restore-pointer-events_14yj0_1lwse_314"
      >
        SceneRuleTargetOpacityEditor
      </div>
    </div>
  </div>
</div>
`;
